feat: add activity logging for clients and employees
- Implemented activity logging functionality in the API for both clients and employees, including methods to retrieve and add activity logs.
- Enhanced the ChatPanel component to support fetching and displaying activity logs based on the selected entity (client or employee).
- Added error handling and loading states for activity log operations.
- Updated validation schemas for client and employee forms to conditionally require fields based on the creation context.
- Introduced a new job to refresh Telegram avatars for employees on a scheduled basis.
- Enhanced the ContactsTab component to manage Telegram link generation and unlinking, with appropriate error handling and user feedback.
- Improved styling for error messages and hints in the EmployeeModal and ContactsTab components.

--- a/Backend/src/bot/locales/en.json
+++ b/Backend/src/bot/locales/en.json
@@ -1,6 +1,8 @@
 {
   "greeting": "Hello! To link your account, please use the link from the CRM system (the 'Link Telegram' button) at gsse.work.",
   "linkInvalid": "The link is invalid or has expired. Please generate a new one in the CRM.",
+  "linkAlready": "Telegram is already linked to this account.",
+  "linkTaken": "This Telegram account is already linked to another profile. Please unlink it first.",
   "linkSuccess": "Done! Your account is linked to <b>{{login}}</b>. You will now receive notifications.",
   "errorGeneric": "An error occurred while linking. Please try again later."
 }
