--- a/Backend/src/bot/locales/ru.json
+++ b/Backend/src/bot/locales/ru.json
@@ -1,6 +1,8 @@
 {
   "greeting": "Привет! Для привязки аккаунта перейдите по ссылке из CRM-системы (кнопка «Привязать Telegram») на сайте gsse.work.",
   "linkInvalid": "Ссылка недействительна или истекла. Сгенерируйте новую в CRM.",
+  "linkAlready": "Telegram уже привязан к этому аккаунту.",
+  "linkTaken": "Этот Telegram уже привязан к другому аккаунту. Сначала отвяжите его.",
   "linkSuccess": "Готово! Аккаунт привязан к <b>{{login}}</b>. Теперь вы будете получать уведомления.",
   "errorGeneric": "Произошла ошибка при привязке. Попробуйте позже."
 }
