--- a/Backend/src/bot/locales/uk.json
+++ b/Backend/src/bot/locales/uk.json
@@ -1,6 +1,8 @@
 {
   "greeting": "Вітаю! Для прив'язки акаунту перейдіть за посиланням із CRM-системи (кнопка «Прив'язати Telegram») на сайті gsse.work.",
   "linkInvalid": "Посилання недійсне або термін його дії закінчився. Будь ласка, згенеруйте нове в CRM.",
+  "linkAlready": "Telegram уже прив'язаний до цього акаунту.",
+  "linkTaken": "Цей Telegram уже прив'язаний до іншого акаунту. Спочатку відв'яжіть його.",
   "linkSuccess": "Готово! Ваш акаунт прив'язано до <b>{{login}}</b>. Тепер ви будете отримувати сповіщення.",
   "errorGeneric": "Сталася помилка під час прив'язки. Спробуйте пізніше."
 }
